feat: create redux store, update homepage

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -17,4 +17,21 @@ a {
   text-decoration: none;
 }
 
+// a:hover {
+//   color: var(--pink) !important;
+//   background: rgba(0, 0, 0, 20%);
+// }
+
+
+  // .main {
+  //   flex: 0.8;
+  //   width: 100%;
+
+  // }
+
+  // .routes {
+  //   padding: 20px;
+  // }
+
+
 
