feat: add chart component, add chart on CryptoInfo page

--- a/src/pages/CryptoInfo/CryptoInfo.module.scss
+++ b/src/pages/CryptoInfo/CryptoInfo.module.scss
@@ -32,6 +32,11 @@
         }
     }
 
+    .select_timeperiod{
+        width: 200px;
+        margin-top: 20px;
+    }
+
     .cryptoInfo_stats_wrapper{
         display: flex;
         justify-content: space-between;
